# waydriver

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  flake.nix  release-plz.toml  rust-analyzer.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  docs.yml  publish-docker.yml  release-plz.yml
crates/waydriver/: CHANGELOG.md  Cargo.toml
crates/waydriver-capture-mutter/: CHANGELOG.md  Cargo.toml
crates/waydriver-capture-mutter/src/: lib.rs
crates/waydriver-compositor-mutter/: CHANGELOG.md  Cargo.toml
crates/waydriver-compositor-mutter/src/: error.rs  lib.rs
crates/waydriver-e2e/: Cargo.toml
crates/waydriver-e2e/tests/: e2e.rs  ocr_perf.rs
crates/waydriver-examples/: Cargo.toml
crates/waydriver-examples/examples/: gnome_calculator.rs
crates/waydriver-fixture-gtk/: Cargo.toml  README.md
crates/waydriver-fixture-gtk/src/: main.rs
crates/waydriver-input-mutter/: CHANGELOG.md  Cargo.toml
crates/waydriver-input-mutter/src/: lib.rs
crates/waydriver-mcp/: CHANGELOG.md  Cargo.toml
crates/waydriver-mcp/src/: cli.rs  main.rs  mcp_error.rs  params.rs  report.rs  session.rs  viewer.html
crates/waydriver-mcp/src/tools/: capture.rs  inspection.rs  interaction.rs  lifecycle.rs  mod.rs
crates/waydriver-mcp/tests/: e2e.rs
crates/waydriver/src/: atspi.rs  backend.rs  capture.rs  error.rs  gaction.rs  gsettings.rs  keysym.rs  lib.rs  locator.rs  role.rs  session.rs  sink.rs
crates/waydriver/src/visual/: baseline.rs  color.rs  engine.rs  mod.rs  models.rs  region.rs  template.rs
crates/waydriver/tests/: atspi_tree_walk_bench.rs  e2e.rs  external_sinks.rs  gsettings_live_reload.rs
docs/: book.toml  visual-locator.md
docs/design/: atspi-event-cache.md
docs/src/: SUMMARY.md  api-reference.md  architecture.md  changelog.md  contributing.md  getting-started.md  introduction.md
docs/src/assets/: .gitkeep  demo.webm
docs/src/guide/: locators.md  mcp-server.md  visual-locator.md
scripts/: dev-container.sh  gen-changelog-page.sh
