[workspace]
resolver = "2"
members = [
    "crates/waydriver",
    "crates/waydriver-compositor-mutter",
    "crates/waydriver-input-mutter",
    "crates/waydriver-capture-mutter",
    "crates/waydriver-mcp",
    "crates/waydriver-fixture-gtk",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/BohdanTkachenko/waydriver"
homepage = "https://github.com/BohdanTkachenko/waydriver"
authors = ["Bohdan Tkachenko <bohdan@tkachenko.dev>"]

[workspace.dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "client", "transport-child-process"] }
clap = { version = "4", features = ["derive", "env"] }
atspi = { version = "0.29", features = ["proxies", "connection"] }
zbus = "5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
futures-util = "0.3"
async-trait = "0.1"
tempfile = "3"
image = "0.25"
gstreamer = "0.25"
gstreamer-app = "0.25"
sxd-document = "0.3"
sxd-xpath = "0.4"
gtk4 = "0.10"
# `v1_5` enables AdwDialog (the modern dialog primitive) and SwitchRow.
# Bump this the same time the flake's libadwaita version bumps.
libadwaita = { version = "0.8", features = ["v1_5"] }
