[workspace]
resolver = "2"
members = [
    "crates/waydriver",
    "crates/waydriver-compositor-mutter",
    "crates/waydriver-input-mutter",
    "crates/waydriver-capture-mutter",
    "crates/waydriver-mcp",
    "crates/waydriver-fixture-gtk",
    "crates/waydriver-e2e",
    "crates/waydriver-examples",
]

[workspace.package]
version = "0.3.8"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/BohdanTkachenko/waydriver"
homepage = "https://waydriver.io"
authors = ["Bohdan Tkachenko <bohdan@tkachenko.dev>"]

[workspace.dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io", "client", "transport-child-process"] }
clap = { version = "4", features = ["derive", "env"] }
atspi = { version = "0.29", features = ["proxies", "connection"] }
zbus = "5"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
futures-util = "0.3"
async-trait = "0.1"
tempfile = "3"
image = "0.25"
# Pure-Rust OCR stack — gated to the `visual` feature on `waydriver`, so
# this only compiles when a consumer opts in. See `crates/waydriver/src/visual/`.
ocrs = "0.12"
rten = "0.24"
rten-imageproc = "0.24"
# Pure-Rust HTTP client for downloading ocrs model files on first use.
# Default features bring TLS via `rustls` so we avoid OpenSSL.
ureq = "3"
# Pure-Rust colour-space conversions used by the visual locator for
# perceptual Lab/CIEDE2000 distance comparisons.
palette = { version = "0.7", default-features = false, features = ["std"] }
# Unicode normalization (NFKD + combining-mark stripping) used by the
# visual locator's case-fold-and-accent-insensitive matcher.
unicode-normalization = "0.1"
# SHA-256 hashing for verifying downloaded ocrs model files.
sha2 = "0.10"
hex = "0.4"
# Classical image processing — used by the visual locator's basic
# template-matching path (`Locator::find_image`). Heavy-ish (~150kLoC
# crate) but the most maintained option and the only one with a
# tested NCC implementation we don't have to write ourselves.
imageproc = { version = "0.25", default-features = false }
gstreamer = "0.25"
gstreamer-app = "0.25"
sxd-document = "0.3"
sxd-xpath = "0.4"
gtk4 = "0.10"
# `v1_6` enables AdwDialog (the modern dialog primitive), SwitchRow, and ButtonRow.
# Bump this the same time the flake's libadwaita version bumps.
libadwaita = { version = "0.8", features = ["v1_6"] }

# OCR performance (issue #24). The opt-in `visual` feature runs inference on
# `rten`, which is ~30x slower built unoptimized — minutes per full-frame OCR
# pass at the dev profile's opt-level 0 instead of seconds. Optimize just the
# rten/ocrs stack even in dev/test builds so `find_by_text` is usable under
# `cargo test`; our own crates (and the rest of the dependency graph) stay at
# opt-level 0 so incremental builds of our code stay fast. These crates compile
# only when the `visual` feature is enabled, so plain builds pay nothing extra.
# Keep this list in sync with rten's crate split when upgrading. (Downstream
# consumers want the broader `[profile.dev.package."*"] opt-level = 3`, which a
# library can't ship for them — see the warning in src/visual/engine.rs.)
[profile.dev.package]
ocrs = { opt-level = 3 }
rten = { opt-level = 3 }
rten-base = { opt-level = 3 }
rten-gemm = { opt-level = 3 }
rten-imageproc = { opt-level = 3 }
rten-model-file = { opt-level = 3 }
rten-onnx = { opt-level = 3 }
rten-shape-inference = { opt-level = 3 }
rten-simd = { opt-level = 3 }
rten-tensor = { opt-level = 3 }
rten-vecmath = { opt-level = 3 }
