[package]
name = "waydriver-capture-mutter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Mutter ScreenCast + PipeWire screen capture backend for waydriver"
readme = "../../README.md"
keywords = ["wayland", "mutter", "screencast", "pipewire", "testing"]
categories = ["development-tools::testing", "multimedia::images"]

[dependencies]
waydriver = { path = "../waydriver", version = "0.3.1" }
waydriver-compositor-mutter = { path = "../waydriver-compositor-mutter", version = "0.3.1" }
async-trait.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus.workspace = true

[package.metadata.docs.rs]
# Document only this crate, not the entire dependency tree. shipyard hosts
# generated rustdoc per published version and counts it against the storage
# quota; documenting all deps produced ~683 MB per version. --no-deps keeps it
# small. (Harmless for public docs.rs, which links to deps rather than rebuilding
# them.)
cargo-args = ["--no-deps"]
