[package]
name = "waydriver-compositor-mutter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Mutter headless compositor backend for waydriver"
readme = "../../README.md"
keywords = ["wayland", "mutter", "headless", "testing", "compositor"]
categories = ["development-tools::testing"]

[dependencies]
waydriver = { path = "../waydriver", version = "0.2.0" }
async-trait.workspace = true
libc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true
