[package]
name = "waydriver-compositor-mutter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Mutter headless compositor backend for waydriver"
readme = "../../README.md"
keywords = ["wayland", "mutter", "headless", "testing", "compositor"]
categories = ["development-tools::testing"]

[dependencies]
waydriver = { path = "../waydriver", version = "0.3.2" }
async-trait.workspace = true
libc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zbus.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.docs.rs]
# Document only this crate, not the entire dependency tree. shipyard hosts
# generated rustdoc per published version and counts it against the storage
# quota; documenting all deps produced ~683 MB per version. --no-deps keeps it
# small. (Harmless for public docs.rs, which links to deps rather than rebuilding
# them.)
cargo-args = ["--no-deps"]
