[package]
name = "waydriver-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Runnable examples that drive real applications with waydriver"
publish = false

[dependencies]
waydriver = { path = "../waydriver" }
waydriver-compositor-mutter = { path = "../waydriver-compositor-mutter" }
waydriver-input-mutter = { path = "../waydriver-input-mutter" }
waydriver-capture-mutter = { path = "../waydriver-capture-mutter" }
anyhow.workspace = true
tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[[example]]
name = "gnome_calculator"
path = "examples/gnome_calculator.rs"
