[package]
name = "waydriver-input-mutter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Mutter RemoteDesktop keyboard and pointer input backend for waydriver"
readme = "../../README.md"
keywords = ["wayland", "mutter", "input", "testing", "automation"]
categories = ["development-tools::testing"]

[dependencies]
waydriver = { path = "../waydriver", version = "0.2.0" }
waydriver-compositor-mutter = { path = "../waydriver-compositor-mutter", version = "0.2.0" }
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
zbus.workspace = true
