[package]
name = "waydriver-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server for headless Wayland UI testing via waydriver"
readme = "../../README.md"
keywords = ["wayland", "testing", "mcp", "atspi", "accessibility"]
categories = ["development-tools::testing"]

[dependencies]
waydriver = { version = "0.2.3", path = "../waydriver" }
waydriver-capture-mutter = { version = "0.2.3", path = "../waydriver-capture-mutter" }
waydriver-compositor-mutter = { version = "0.2.3", path = "../waydriver-compositor-mutter" }
waydriver-input-mutter = { version = "0.2.3", path = "../waydriver-input-mutter" }
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
waydriver = { path = "../waydriver", features = ["test-support"] }
async-trait.workspace = true
tempfile.workspace = true
tokio-util.workspace = true
