[package]
name = "waydriver-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "MCP server for headless Wayland UI testing via waydriver"
readme = "../../README.md"
keywords = ["wayland", "testing", "mcp", "atspi", "accessibility"]
categories = ["development-tools::testing"]

[dependencies]
waydriver = { version = "0.3.2", path = "../waydriver", features = ["visual"] }
waydriver-capture-mutter = { version = "0.3.2", path = "../waydriver-capture-mutter" }
waydriver-compositor-mutter = { version = "0.3.2", path = "../waydriver-compositor-mutter" }
waydriver-input-mutter = { version = "0.3.2", path = "../waydriver-input-mutter" }
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
waydriver = { path = "../waydriver", features = ["test-support"] }
async-trait.workspace = true
tempfile.workspace = true

[package.metadata.docs.rs]
# Document only this crate, not the entire dependency tree. shipyard hosts
# generated rustdoc per published version and counts it against the storage
# quota; documenting all deps produced ~683 MB per version. --no-deps keeps it
# small. (Harmless for public docs.rs, which links to deps rather than rebuilding
# them.)
cargo-args = ["--no-deps"]
