[package]
name = "waydriver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Headless GUI testing for Wayland applications via AT-SPI accessibility APIs and PipeWire screen capture"
readme = "../../README.md"
keywords = ["wayland", "testing", "gui", "atspi", "accessibility"]
categories = ["development-tools::testing", "gui"]

[features]
default = []
test-support = []
# Optional OCR-backed visual locator (`Session::find_by_text`). Adds the
# pure-Rust ocrs stack (~tens of MB of compile time, ~50MB of ONNX model
# files downloaded to `$XDG_CACHE_HOME/waydriver/ocrs-models/` on first
# use). Off by default; consumers opt in for tests that need to drive
# widgets missing from the AT-SPI tree.
visual = ["dep:ocrs", "dep:rten", "dep:rten-imageproc", "dep:ureq", "dep:palette", "dep:unicode-normalization", "dep:sha2", "dep:hex", "dep:imageproc"]

[dependencies]
async-trait.workspace = true
atspi.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
libc.workspace = true
sxd-document.workspace = true
sxd-xpath.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zbus.workspace = true
# Non-optional: used by `Locator::screenshot` (crop) regardless of
# whether the visual / OCR feature is enabled.
image.workspace = true

# `visual` feature deps.
ocrs = { workspace = true, optional = true }
rten = { workspace = true, optional = true }
rten-imageproc = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
palette = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
# `tests/external_sinks.rs` drives the mock D-Bus sinks as a real bus client.
# zbus/tokio/tokio-util are already normal deps (available to integration tests);
# futures-util is the only extra — it awaits the portal Response signal stream.
futures-util.workspace = true

[package.metadata.docs.rs]
# Document only this crate, not the entire dependency tree. shipyard hosts
# generated rustdoc per published version and counts it against the storage
# quota; documenting all deps produced ~683 MB per version. --no-deps keeps it
# small. (Harmless for public docs.rs, which links to deps rather than rebuilding
# them.)
cargo-args = ["--no-deps"]
